--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title></title>
 </head>
 <body>
-
+<center>
+	
+</center>
 <script type="text/javascript">
 fetch('https://api.covid19api.com/summary')
 	.then((resp)=>resp.json())
