--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	}
 </style>
 <body>
-<h1>Corona Status Worldwide</h1>
+
 <script type="text/javascript">
 fetch('https://api.covid19api.com/summary')
 	.then((resp)=>resp.json())
 	.then(function(data){
-		document.write('<center><table border=1><caption>Corona Status Worldwide</caption><tr><th>Country</th><th>Total Confirmed</th><th>Total Deaths</th><th>Total Recovered</th></tr>')
+		document.write('<center><h1>Corona Status Worldwide</h1><table border=1><tr><th>Country</th><th>Total Confirmed</th><th>Total Deaths</th><th>Total Recovered</th></tr>')
 		for ( i =0; i<data.Countries.length; i++) {
 			country = JSON.stringify(data.Countries[i]['Country']).slice(1, -1)
 			TotalConfirmed = JSON.stringify(data.Countries[i]['TotalConfirmed'])
